# HoopTrack

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  README.md  index.html  makefile  mkdocs.yaml  setup.cfg  setup.py  sitemap.xml
.github/workflows/: lint.yaml  test.yaml
contribute/thanks/: index.html
development/: test_yolov8.py  tracking.py
docs/: index.md
docs/contribute/: thanks.md
docs/methodology/: methodology_yolo.md
docs/tutorials/: 00_GettingStarted.md
methodology/methodology_yolo/: index.html
search/: search_index.json
src/hooptrack/: __init__.py
src/hooptrack/basketball/: __init__.py  inference_pipeline.py  tracker.py  utils.py  visualiser.py
src/hooptrack/dashboard/: __init__.py
src/hooptrack/pipeline/: __init__.py
src/hooptrack/schemas/: __init__.py  config.py  inference.py
tests/: conftest.py
tests/units/: test_inferencepipeline_basketball.py  test_schemas.py  test_tracker.py  test_utils.py  test_visualiser.py
tests/units/fixture/: __init__.py  run_ort.pkl
tutorials/00_GettingStarted/: index.html
