[metadata]
name = hooptrack
version = attr: hooptrack.VERSION
author = Mathis Nicoli
author_email = mathis.nicoli@gmail.com
description = Simply take your basketball stats over a video automatically
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MathisNcl/HoopTrack
license = MIT

platforms = any

classifiers =
    Programming Language :: Python :: 3.11

[options]
packages = find:
install_requires =
    matplotlib==3.8.0
    opencv-contrib-python==4.8.1.78
    # ultralytics==8.0.203
    pydantic
    onnxruntime


include_package_data = True
packag_dir =
    =src
python_requires = >=3.11

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
all =
    %(testing)s
    %(dev)s
    %(doc)s

testing =
    pytest
    pytest-cov
    coverage

dev =
    black
    flake8
    isort
    mypy
    pre-commit


doc =
    mkdocs
    mkdocs-material
    mdx_include

[bdist_wheel]
universal = 1

[flake8]
max-line-length=120
ignore=E203

[mypy]
python_version = 3.11
ignore_missing_imports = True
disallow_untyped_defs = True
show_error_codes = True

[mypy-tests.*]
disallow_untyped_defs = False
disable_error_code = annotation-unchecked, index, union-attr

[isort]
src_paths =
    src
    tests
profile = black
line_length = 120
